Simplify openapi test server implementation
The petstore requires more authentication configuration.
Additionally, we can do away with reading the env,
it would be better to configure and test catalogs in tests.

So we can use fastapi and eliminate using environment variables.

(cherry picked from commit 3bd6690b89a320771868ba82a48d84567bd0abd4)